<resources>
    <string name="app_name">Users</string>
    <string name="button_log_in">Log in</string>
    <string name="text_view_login">Login</string>
    <string name="text_view_signup">Signup</string>
    <string name="button_sign_up">Sign up</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? <font color="#355C61"><b>SignUp</b></font></string>
    <string name="already_have_an_account_login">Already have an account? <font color="#355C61"><b>Login</b></font></string>
    <string name="text_view_username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="user_image_contentDescription">User_image</string>
    <string name="text_view_password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="your_data_has_been_successfully_saved">Your data has been successfully saved!</string>
    <string name="this_username_already_exists_please_try_another_username">This username already exists, please try another username</string>
</resources>