<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MyApplication"
    tools:context=".fragments.signup.SignupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_header_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/user_image_contentDescription"
                android:scaleType="fitXY"
                android:src="@drawable/top_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_signup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/app_margin"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center|center_vertical"
                android:text="@string/text_view_signup"
                android:textAlignment="center"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view_header_app" />

            <LinearLayout
                android:id="@+id/linear_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ll_margin_start"
                android:layout_marginTop="@dimen/ll_margin_top"
                android:layout_marginEnd="@dimen/ll_margin_end"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_signup_title">

                <TextView
                    android:id="@+id/text_view_user_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/text_view_username"
                    android:textSize="@dimen/normal_text_size" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/ti_margin_top"
                        android:ems="10"
                        android:hint="@string/enter_your_username"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ll_margin_start"
                android:layout_marginTop="@dimen/ll_margin_top"
                android:layout_marginEnd="@dimen/ll_margin_end"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_username">

                <TextView
                    android:id="@+id/text_view_password_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/text_view_password"
                    android:textSize="@dimen/normal_text_size" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_user_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/ti_margin_top"
                        android:ems="10"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_view_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:minHeight="@dimen/tv_min_height"
                android:text="@string/already_have_an_account_login"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_password" />

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_sign_up"
                android:textSize="@dimen/btn_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_log_in" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>